--- a/Luxco-server/package.json
+++ b/Luxco-server/package.json
@@ -4,7 +4,7 @@
   "description": "Web 2 final project",
   "main": "server.js",
   "scripts": {
-    "start":"nodemon server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Phu Loc",
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
